# pdd-coach-bot

./: .env.example  .gitignore  README.md  pyproject.toml
content/: lessons.json  questions_starter.json  study_plan_april_2026.json  topics.json
deploy/systemd/: pdd-coach-bot.service  pdd-coach-daily-plan.service  pdd-coach-daily-plan.timer
deploy/windows/: start-pdd-coach-bot.cmd
pdd_coach_bot/: __init__.py  bot.py  coaching.py  config.py  content.py  keyboards.py  logic.py  main.py  models.py  storage.py
pdd_coach_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: check_telegram_connectivity.py  generate_lesson_slides.py  import_external_tickets.py  install_systemd_service.sh  run_bot.sh  run_daily_plan_tick.sh  send_daily_plans.py  service_logs.sh  service_status.sh
tests/: test_adaptive_logic.py  test_coaching.py  test_config.py  test_daily_plan.py  test_import_external_tickets.py  test_keyboards.py  test_logic.py  test_session_flow.py
